@@ -27,13 +27,12 @@ import org.apache.kafka.common.message.OffsetFetchResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.Readable;
-import org.apache.kafka.common.record.RecordBatch;
+import org.apache.kafka.common.record.internal.RecordBatch;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -55,14 +54,13 @@ public class OffsetFetchRequest extends AbstractRequest {
 
         public static Builder forTopicIdsOrNames(
             OffsetFetchRequestData data,
-            boolean throwOnFetchStableOffsetsUnsupported,
-            boolean enableUnstableLastVersion
+            boolean throwOnFetchStableOffsetsUnsupported
         ) {
             return new Builder(
                 data,
                 throwOnFetchStableOffsetsUnsupported,
                 ApiKeys.OFFSET_FETCH.oldestVersion(),
-                ApiKeys.OFFSET_FETCH.latestVersion(enableUnstableLastVersion)
+                ApiKeys.OFFSET_FETCH.latestVersion()
             );
         }
 
@@ -229,7 +227,7 @@ public class OffsetFetchRequest extends AbstractRequest {
                 );
             }
 
-            return Collections.singletonList(group);
+            return List.of(group);
         }
     }
 
@@ -324,6 +322,10 @@ public class OffsetFetchRequest extends AbstractRequest {
 
     public static boolean useTopicIds(short version) {
         return version >= TOPIC_ID_MIN_VERSION;
+    }
+
+    public static boolean requestAllOffsets(OffsetFetchRequestData.OffsetFetchRequestGroup request) {
+        return request.topics() == null;
     }
 
     @Override
