@@ -20,7 +20,6 @@ import org.apache.kafka.common.config.ConfigDef;
 import org.apache.kafka.common.config.ConfigException;
 import org.apache.kafka.connect.util.TopicAdmin;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
@@ -102,11 +101,11 @@ public class TopicCreationConfig {
         int orderInGroup = 0;
         ConfigDef configDef = new ConfigDef();
         configDef
-                .define(INCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, Collections.emptyList(),
+                .define(INCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, List.of(),
                         REGEX_VALIDATOR, ConfigDef.Importance.LOW,
                         INCLUDE_REGEX_DOC, group, ++orderInGroup, ConfigDef.Width.LONG,
                         "Inclusion Topic Pattern for " + group)
-                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, Collections.emptyList(),
+                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, List.of(),
                         REGEX_VALIDATOR, ConfigDef.Importance.LOW,
                         EXCLUDE_REGEX_DOC, group, ++orderInGroup, ConfigDef.Width.LONG,
                         "Exclusion Topic Pattern for " + group)
@@ -129,7 +128,7 @@ public class TopicCreationConfig {
                         new ConfigDef.NonNullValidator(), ConfigDef.Importance.LOW,
                         INCLUDE_REGEX_DOC, DEFAULT_TOPIC_CREATION_GROUP, ++orderInGroup, ConfigDef.Width.LONG,
                         "Inclusion Topic Pattern for " + DEFAULT_TOPIC_CREATION_GROUP)
-                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, Collections.emptyList(),
+                .define(EXCLUDE_REGEX_CONFIG, ConfigDef.Type.LIST, List.of(),
                         new ConfigDef.NonNullValidator(), ConfigDef.Importance.LOW,
                         EXCLUDE_REGEX_DOC, DEFAULT_TOPIC_CREATION_GROUP, ++orderInGroup, ConfigDef.Width.LONG,
                         "Exclusion Topic Pattern for " + DEFAULT_TOPIC_CREATION_GROUP)
